--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/bj3116060412/Downloads/jnetpcap-1.3.0-1.win64/jnetpcap-1.3.0/jnetpcap.jar" sourcepath="C:/Users/bj3116060412/Downloads/jnetpcap-src-1.3.0-1.zip"/>
-	<classpathentry kind="lib" path="C:/pcap4j-1/pcap4j-core/target/pcap4j-core-1.7.1-SNAPSHOT.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/usr/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/home/ubuntu/桌面/jar/pcap4j-core-1.7.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/home/ubuntu/桌面/jar/jnetpcap.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
